--- a/style.css
+++ b/style.css
@@ -6,39 +6,73 @@ body{
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    padding: 0.2rem;
+    padding: 0.5rem;
     border: 0.1rem solid rgb(34, 18, 18);
     padding: 6rem;
     background: rgb(255, 255, 255);
     border-radius: 2rem;
-    max-width: 50%;
+    max-width: 40%;
 }
 
 .form-label{
     display: flex;
     justify-content: center;
+    margin: 0.5rem;
 }
 
 .form-input{
     padding: 0.5rem;
-    margin: 0.3rem;
+    margin: 0 auto;
+    width: 9rem;
 }
+
 .btn-submit{
     margin: 0 auto;
     width: 5rem;
     padding: 0.5rem;
+    margin-top: 0.5rem;
+}
+
+.btn-submit:hover{
+    width: 5.2rem;
+    background: rgb(61, 53, 53);
+    color: white;
+    cursor: pointer;
 }
 
 .pdt-main{
     display: flex;
     flex-direction: column;
+    border: 0.1rem solid rgb(255, 255, 255);
+    max-width: 60%;
+    margin: 0 auto;
+    margin-top: 0.3rem;
 }
+.pdt-main:hover{
+    background: rgb(231, 231, 241);
+    
+}
+
 .pdt-logo-marca{
     margin: 0 auto;
-
 }
 
 .pdt-conteiner{
     display: block;
     flex-direction: row-reverse;
+}
+
+table td, table th{
+    padding: 0.9rem;
+}
+
+.btn-editar{
+    background: rgb(72, 72, 221);
+    color: white;
+    cursor: pointer;
+}
+.btn-delete{
+    color: white;
+    background: red;
+    cursor: pointer;
 }
