--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
     padding: 0.5rem;
     margin: 0 auto;
     width: 9rem;
+    border-radius: 2rem;
 }
 
 .btn-submit{
@@ -31,6 +32,7 @@ body{
     width: 5rem;
     padding: 0.5rem;
     margin-top: 0.5rem;
+    border-radius: 2rem;
 }
 
 .btn-submit:hover{
